@@ -30,3 +30,4 @@ Makefile
 Scratchpad.txt
 Unix Worksheet.worksheet
 project.bbprojectdata
+Premake4.tmproj
